[gd_scene load_steps=21 format=2]

[ext_resource path="res://Resources/SFX/lowFrequency_explosion_000.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://Scenes/healthbar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/PlayerHUD.gd" type="Script" id=5]
[ext_resource path="res://Resources/fonts/Kenney Blocks.ttf" type="DynamicFontData" id=8]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.644828, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 500, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="CanvasItemMaterial" id=11]
light_mode = 1

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=13]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="Curve2D" id=14]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1083, -61, 0, 0, 0, 0, 1083, 706, 0, 0, 0, 0, -67, 706, 0, 0, 0, 0, -67, -60, 0, 0, 0, 0, 1083, -61 )
}

[node name="Game" type="Node"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 640.0 ],
"_edit_vertical_guides_": [ 0.0, 512.0 ]
}

[node name="AsteroidContainer" type="Node" parent="."]

[node name="BulletContainer" type="Node" parent="."]

[node name="walls container" type="Node" parent="."]

[node name="wallLeft" type="ColorRect" parent="walls container"]
visible = false
modulate = Color( 5, 5, 5, 1 )
material = SubResource( 1 )
margin_left = -64.0
margin_top = -64.0
margin_bottom = 704.0
rect_pivot_offset = Vector2( 1440, 456 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="wallright" type="ColorRect" parent="walls container"]
visible = false
modulate = Color( 5, 5, 5, 1 )
material = SubResource( 2 )
margin_left = 1024.0
margin_top = -64.0
margin_right = 1088.0
margin_bottom = 704.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="wallbottom" type="ColorRect" parent="walls container"]
visible = false
modulate = Color( 5, 5, 5, 1 )
material = SubResource( 3 )
margin_top = 640.0
margin_right = 1024.0
margin_bottom = 704.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="walltop" type="ColorRect" parent="walls container"]
visible = false
modulate = Color( 5, 5, 5, 1 )
material = SubResource( 4 )
margin_top = -64.0
margin_right = 1024.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="top" type="Particles2D" parent="walls container"]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 5 )
position = Vector2( 512, 0 )
amount = 64
explosiveness = 0.1
randomness = 1.0
local_coords = false
process_material = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="right" type="Particles2D" parent="walls container"]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 5 )
position = Vector2( 1024, 320 )
rotation = 1.5708
amount = 64
explosiveness = 0.1
randomness = 1.0
local_coords = false
process_material = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="left" type="Particles2D" parent="walls container"]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 5 )
position = Vector2( 0, 320 )
rotation = -1.5708
amount = 64
explosiveness = 0.1
randomness = 1.0
local_coords = false
process_material = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="bottom" type="Particles2D" parent="walls container"]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 5 )
position = Vector2( 512, 640 )
rotation = 3.14159
amount = 64
explosiveness = 0.1
randomness = 1.0
local_coords = false
process_material = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 320 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 320 )
scale = Vector2( 0.5, 0.5 )
current = true
zoom = Vector2( 0.6, 0.6 )
process_mode = 0
limit_left = -32
limit_top = -32
limit_right = 1056
limit_bottom = 672
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 2.0
editor_draw_limits = true
editor_draw_drag_margin = true
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerHUD" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="healthLabel" type="Label" parent="PlayerHUD"]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 11 )
anchor_right = 1.0
margin_left = 16.0
margin_right = -808.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 170, 32 )
custom_fonts/font = SubResource( 12 )
text = "Health"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthbar" parent="PlayerHUD" instance=ExtResource( 4 )]
position = Vector2( 116, 71 )

[node name="ScoreLabel" type="Label" parent="PlayerHUD"]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 11 )
anchor_right = 1.0
margin_left = 416.0
margin_top = 2.0
margin_right = -416.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 170, 32 )
custom_fonts/font = SubResource( 13 )
text = "10000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemies" type="Label" parent="PlayerHUD"]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 11 )
anchor_right = 1.0
margin_left = 808.0
margin_right = -16.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 170, 32 )
custom_fonts/font = SubResource( 12 )
text = "Enemies:
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restartMenuDelay" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 4, -3 )
curve = SubResource( 14 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 1083, -61 )
rotation = 1.5708
rotate = false

[node name="asteroid_explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
